# cw-plus

.circleci/: config.yml
contracts/cosmos-sdk-proto/src/: lib.rs
contracts/cosmos-sdk-proto/src/prost/: osmosis.gamm.v1beta1.rs
contracts/cw20-ics20/: Cargo.toml
contracts/cw20-ics20/examples/: schema.rs
contracts/cw20-ics20/schema/: execute_msg.json  init_msg.json  swap_msg.json
contracts/cw20-ics20/src/: base.rs  contract.rs  error.rs  ibc.rs  lib.rs  main.rs  msg.rs  state.rs  test_helpers.rs  tx.rs
contracts/cw20-ics20/src/tx/: bank.rs  cosmos_tx.rs  gamm.rs  msg.rs
contracts/gamm-contract/: Cargo.toml
contracts/gamm-contract/examples/: schema.rs
contracts/gamm-contract/schema/: execute_msg.json
contracts/gamm-contract/src/: amount.rs  contract.rs  ibc.rs  lib.rs  msg.rs
contracts/gamm-contract/src/tx/: bank.rs  msg.rs
