[package]
name = "cw20-ics20"
version = "0.10.3"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "IBC Enabled contracts that receives CW20 tokens and sends them over ICS20 to a remote chain"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmos-sdk-proto = { version = "0.9", default-features = false, path = "../cosmos-sdk-proto" }
cw0 = { path = "../../packages/cw0", version = "0.10.3" }
cw2 = { path = "../../packages/cw2", version = "0.10.3" }
cw20 = { path = "../../packages/cw20", version = "0.10.3" }
cosmwasm-std = { version = "1.0.0-beta", features = ["stargate"] }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.10.3" }
schemars = "0.8.1"
prost = "0.9"
eyre = "0.6"
prost-types = "0.9"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tendermint = { version = "=0.23.3", features = ["secp256k1"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }

[[bin]]
name = "cw20-ics20"
path = "src/main.rs"